[package]
name = "fix"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = { version = "0.2", default-features = false, features = [
    "3d",
    "f32",
    "parallel",
    "parry-f32",
    "serialize",
    "simd",
] }

[patch.crates-io]
avian3d = { git = "https://github.com/ironpeak/avian", rev = "4daec60054673b7e44b88b32513fe7a58382cdaf" }
avian_derive = { git = "https://github.com/ironpeak/avian", rev = "4daec60054673b7e44b88b32513fe7a58382cdaf" }
